# training

./: .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml  requirements-runpod.txt
analysis/: 2026-04-17_research_session_summary.md  2026-05-06_boundary_objective_experiment_summary.md  analyze_belief_r_full_info_confusions.py  analyze_belief_r_run.py  api_pilot_report.md  atomic_explicit_report.md  belief_r_commitment_control_spotcheck.md  belief_r_commitment_control_stats.md  belief_r_false_replace_pattern_memo.md  belief_r_final_targeted_fix_report.md  belief_r_full_info_confusion_report.md  belief_r_missed_overturn_pattern_memo.md  belief_r_openai_gated_ablation_v1_analysis.md  belief_r_openai_gated_ablation_v1_error_summary.csv  belief_r_openai_gated_stable_v1_scale50_analysis.md  belief_r_openai_gated_stable_v1_scale50_error_summary.csv  belief_r_repair_round_report.md  belief_r_scale50_and_v3_compare_report.md  cipc_belief_r_lora_v1_report.md  cipc_belief_r_qwen05b_lora_balanced_full_v1_report.md  cipc_belief_r_qwen05b_lora_balanced_v1_report.md  cipc_belief_r_qwen05b_lora_control_focused_v1_report.md  cipc_belief_r_qwen05b_lora_highrank_condition_sampling_v1_report.md  cipc_belief_r_qwen05b_lora_highrank_consistency_v1_report.md  cipc_belief_r_qwen05b_lora_highrank_consistency_v2_report.md  cipc_belief_r_qwen05b_lora_highrank_select_tradeoff_v1_report.md  cipc_belief_r_qwen05b_lora_highrank_v1_report.md  cipc_belief_r_qwen05b_lora_smoke_report.md  cipc_belief_r_qwen05b_lora_tradeoff_repair_v1_report.md  cipc_belief_r_qwen05b_lora_tradeoff_repair_v2_report.md  (+45 more)
(+157 files in other folders)
